- Update dependencies between project to get rid of relation between Common.csproj and BudgetsService.Infrastructure.csproj; - Create Dockerfiles for All services in the system; - Update startup config of all services to handle containerization correctly; - Update ClientApp to use runtime environment variables to avoid of extra image rebuilds when managing several environments.

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -5,6 +5,7 @@
   <meta content='IE=edge' http-equiv='X-UA-Compatible'>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <title>Global Hub</title>
+  <script src="./runtime-env.js"></script>
 </head>
 <body>
 <div id='root'></div>
